--- a/SentiMate/Base.lproj/Main.storyboard
+++ b/SentiMate/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,10 +17,137 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6l-Vx-Dna">
+                                <rect key="frame" x="73" y="80" width="300" height="42"/>
+                                <fontDescription key="fontDescription" name="PingFangTC-Semibold" family="PingFang TC" pointSize="30"/>
+                                <color key="textColor" red="0.3921568627" green="0.3921568627" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tMx-4q-iKb">
+                                <rect key="frame" x="0.0" y="130" width="393" height="722"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xV2-iK-ygK">
+                                    <size key="itemSize" width="192" height="232"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="diary" id="JTw-hd-pbT" customClass="HomeDiaryCell" customModule="SentiMate" customModuleProvider="target">
+                                        <rect key="frame" x="100.66666666666667" y="0.0" width="192" height="232"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gcK-6K-3uF">
+                                            <rect key="frame" x="0.0" y="0.0" width="192" height="232"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qox-vh-Q7d">
+                                                    <rect key="frame" x="20" y="10" width="152" height="212"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="smiley.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="acA-AO-gqP">
+                                                            <rect key="frame" x="0.0" y="1" width="72" height="70.666666666666671"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="acA-AO-gqP" secondAttribute="height" multiplier="1:1" id="KD5-YP-M98"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2024-04-20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7st-U1-qTG">
+                                                            <rect key="frame" x="0.0" y="76" width="152" height="37"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="因為" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="226-WG-5qA">
+                                                            <rect key="frame" x="0.0" y="125" width="48" height="34"/>
+                                                            <fontDescription key="fontDescription" name="PingFangTC-Semibold" family="PingFang TC" pointSize="24"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="類別" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MaV-Be-ZCF">
+                                                            <rect key="frame" x="48" y="125" width="104" height="34"/>
+                                                            <fontDescription key="fontDescription" name="PingFangTC-Semibold" family="PingFang TC" pointSize="24"/>
+                                                            <color key="textColor" red="0.3921568627" green="0.3921568627" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="感到" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8SH-lh-7bj">
+                                                            <rect key="frame" x="0.0" y="166" width="48" height="34"/>
+                                                            <fontDescription key="fontDescription" name="PingFangTC-Semibold" family="PingFang TC" pointSize="24"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="情緒" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GY3-LV-cCM">
+                                                            <rect key="frame" x="48" y="165" width="104" height="34"/>
+                                                            <fontDescription key="fontDescription" name="PingFangTC-Semibold" family="PingFang TC" pointSize="24"/>
+                                                            <color key="textColor" red="0.3921568627" green="0.3921568627" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="GY3-LV-cCM" firstAttribute="leading" secondItem="8SH-lh-7bj" secondAttribute="trailing" id="6p9-se-gnZ"/>
+                                                        <constraint firstAttribute="trailing" secondItem="MaV-Be-ZCF" secondAttribute="trailing" id="9fI-0a-3gJ"/>
+                                                        <constraint firstItem="acA-AO-gqP" firstAttribute="top" secondItem="qox-vh-Q7d" secondAttribute="top" id="AxV-li-ip1"/>
+                                                        <constraint firstAttribute="bottom" secondItem="8SH-lh-7bj" secondAttribute="bottom" constant="12" id="FW8-hp-ytH"/>
+                                                        <constraint firstAttribute="trailing" secondItem="GY3-LV-cCM" secondAttribute="trailing" id="Fkg-TW-UMs"/>
+                                                        <constraint firstItem="8SH-lh-7bj" firstAttribute="leading" secondItem="qox-vh-Q7d" secondAttribute="leading" id="Fks-xp-qqw"/>
+                                                        <constraint firstAttribute="bottom" secondItem="acA-AO-gqP" secondAttribute="bottom" constant="140" id="IJj-kF-zVY"/>
+                                                        <constraint firstItem="acA-AO-gqP" firstAttribute="leading" secondItem="qox-vh-Q7d" secondAttribute="leading" id="Ljc-qJ-Q44"/>
+                                                        <constraint firstItem="MaV-Be-ZCF" firstAttribute="top" secondItem="7st-U1-qTG" secondAttribute="bottom" constant="12" id="Vnh-RU-9hD"/>
+                                                        <constraint firstItem="226-WG-5qA" firstAttribute="leading" secondItem="qox-vh-Q7d" secondAttribute="leading" id="YVF-Yl-SpE"/>
+                                                        <constraint firstAttribute="trailing" secondItem="acA-AO-gqP" secondAttribute="trailing" constant="80" id="aO4-Ob-B2Q"/>
+                                                        <constraint firstItem="226-WG-5qA" firstAttribute="top" secondItem="7st-U1-qTG" secondAttribute="bottom" constant="12" id="fTW-VL-cxX"/>
+                                                        <constraint firstItem="GY3-LV-cCM" firstAttribute="top" secondItem="MaV-Be-ZCF" secondAttribute="bottom" constant="6" id="l2w-Ka-9O8"/>
+                                                        <constraint firstAttribute="trailing" secondItem="7st-U1-qTG" secondAttribute="trailing" id="qOA-Ls-fhc"/>
+                                                        <constraint firstItem="MaV-Be-ZCF" firstAttribute="leading" secondItem="226-WG-5qA" secondAttribute="trailing" id="qez-Ld-eFZ"/>
+                                                        <constraint firstItem="7st-U1-qTG" firstAttribute="top" secondItem="acA-AO-gqP" secondAttribute="bottom" constant="4" id="rDs-at-36w"/>
+                                                        <constraint firstItem="7st-U1-qTG" firstAttribute="leading" secondItem="qox-vh-Q7d" secondAttribute="leading" id="sV8-Tq-I2D"/>
+                                                        <constraint firstItem="8SH-lh-7bj" firstAttribute="top" secondItem="226-WG-5qA" secondAttribute="bottom" constant="7" id="smT-iz-abv"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="qox-vh-Q7d" secondAttribute="bottom" constant="10" id="2JY-V1-AVf"/>
+                                                <constraint firstItem="qox-vh-Q7d" firstAttribute="top" secondItem="gcK-6K-3uF" secondAttribute="top" constant="10" id="SrD-TZ-iGd"/>
+                                                <constraint firstItem="qox-vh-Q7d" firstAttribute="leading" secondItem="gcK-6K-3uF" secondAttribute="leading" constant="20" id="TiV-vV-i4P"/>
+                                                <constraint firstAttribute="trailing" secondItem="qox-vh-Q7d" secondAttribute="trailing" constant="20" id="hng-GG-pjl"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="192" height="232"/>
+                                        <connections>
+                                            <outlet property="categoryLbl" destination="MaV-Be-ZCF" id="6aH-Ai-xuw"/>
+                                            <outlet property="containerView" destination="qox-vh-Q7d" id="YmJ-ZN-vz4"/>
+                                            <outlet property="dateLbl" destination="7st-U1-qTG" id="rXd-ez-e7Y"/>
+                                            <outlet property="emotionImg" destination="acA-AO-gqP" id="thk-oT-hrw"/>
+                                            <outlet property="emotionLbl" destination="GY3-LV-cCM" id="w76-u4-Ags"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Hi!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JHO-1K-cKn">
+                                <rect key="frame" x="20" y="80" width="41" height="42"/>
+                                <fontDescription key="fontDescription" name="PingFangTC-Semibold" family="PingFang TC" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="tMx-4q-iKb" firstAttribute="top" secondItem="JHO-1K-cKn" secondAttribute="bottom" constant="8" id="8kN-rG-IDM"/>
+                            <constraint firstItem="JHO-1K-cKn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="FTV-gL-YPA"/>
+                            <constraint firstItem="tMx-4q-iKb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="IRK-gU-taj"/>
+                            <constraint firstAttribute="bottom" secondItem="tMx-4q-iKb" secondAttribute="bottom" id="UGP-wO-35o"/>
+                            <constraint firstItem="JHO-1K-cKn" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="80" id="a8g-RY-pEZ"/>
+                            <constraint firstItem="Z6l-Vx-Dna" firstAttribute="leading" secondItem="JHO-1K-cKn" secondAttribute="trailing" constant="12" id="exx-xz-rae"/>
+                            <constraint firstAttribute="trailing" secondItem="Z6l-Vx-Dna" secondAttribute="trailing" constant="20" id="hz1-tx-O09"/>
+                            <constraint firstItem="Z6l-Vx-Dna" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="80" id="oBt-Hu-Xop"/>
+                            <constraint firstItem="tMx-4q-iKb" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="oCG-zZ-nJD"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qJP-sV-sKh"/>
+                    <connections>
+                        <outlet property="diaryCollectionView" destination="tMx-4q-iKb" id="deG-Pg-1kz"/>
+                        <outlet property="nameLbl" destination="Z6l-Vx-Dna" id="I9w-hN-ZOQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -305,6 +433,7 @@
         <image name="house" catalog="system" width="128" height="104"/>
         <image name="music.note.list" catalog="system" width="128" height="115"/>
         <image name="pencil" catalog="system" width="128" height="113"/>
+        <image name="smiley.fill" catalog="system" width="128" height="123"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
